--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/peerjs": "0.0.29",
     "angular2-prettyjson": "^3.0.1",
     "angular2-toaster": "^5.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
+    "simple-peer": "^9.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
