--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2-toaster": "^5.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng-inline-svg": "^6.1.0",
     "rxjs": "^5.5.6",
     "simple-peer": "^9.0.0",
     "zone.js": "^0.8.19"
